# tiauth-faroe

./: .env.test  .gitignore  NOTICE  README.md  argon2id.go  email.go  env.go  go.mod  go.sum  interactive.go  main-storage.go  main.go  server.go  sqlite-storage.go  token_socket.go  user-endpoint.go
.github/workflows/: test.yml
py-user-server/: README.md  pyproject.toml
py-user-server/bottle/: main.py  pyproject.toml
py-user-server/client/: pyproject.toml
py-user-server/client/examples/: test_signup_signin.py
py-user-server/client/src/tiauth_faroe/client/: __init__.py  async.py  clients.py  logic.py  sync.py
py-user-server/data/: pyproject.toml
py-user-server/data/src/data/: db.py  model.py  queries.py
py-user-server/lib/src/tiauth_faroe/user_server/: __init__.py
py-user-server/lib/tests/: test_user_server.py
py-user-server/src/tiauth_faroe/user_server/: __init__.py
py-user-server/sync/: README.md  main.py  pyproject.toml
py-user-server/sync-server/: main.py  pyproject.toml
py-user-server/tests/: test_user_server.py
python/: pyproject.toml
python/client/: README.md  pyproject.toml
python/client/src/tiauth_faroe/client/: clients.py  logic.py
python/client/tests/: test_integration.py
python/lib/: pyproject.toml
python/sync-reference-server/: README.md  main.py  pyproject.toml
python/sync-reference-server/tests/: test_tiauth.py
python/sync-server/: pyproject.toml
python/user-server/: LICENSE  NOTICE  README.md  pyproject.toml
python/user-server/src/tiauth_faroe/user_server/: __init__.py
testapp/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
testapp/scripts/: create-admin.ts  run-smtp-server.ts
testapp/src/: main.ts
testapp/src/lib/: client.ts
testapp/src/lib/server/: smtp-server.ts
testapp/tests/: flows.test.ts  setup.ts
tiauth/: .env.test  app.go  argon2id.go  backend_client.go  config.go  email.go  go.mod  go.sum  http_server.go  interactive.go  storage.go  token_socket.go  uds_client.go  user_endpoint.go
tiauth/cmd/: main.go
