[project]
name = "py-user-server-ref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]

[tool.uv.workspace]
members = [
    "sync",
    "data",
    "lib",
    "client"
]
