[project]
name = "py-user-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "sync-server",
    "data",
    "lib",
    "client"
]
