[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.43,<2.1",
    "tiauth_faroe.user_server",
]

[tool.uv.sources]
"tiauth_faroe.user_server" = { workspace = true }

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"
