
[project]
name = "tiauth-faroe-client"
version = "0.1.0"
description = "Client for performing Faroe auth server actions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]

[tool.uv.build-backend]
module-name = "tiauth_faroe.client"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9",
]
