
[project]
name = "tiauth-faroe-client"
version = "0.1.0"
description = "Client for performing Faroe auth server actions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]

[tool.uv]
# Only allow packages uploaded at least 3 days ago to guard against supply chain attacks
exclude-newer = "3 days"

[tool.uv.build-backend]
module-name = "tiauth_faroe.client"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
