[project]
name = "sync-reference-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tiauth_faroe.user_server",
    "tiauth_faroe.client",
    "sqlalchemy>=2.0.45"
]

[tool.uv.sources]
"tiauth_faroe.user_server" = { path = "../user-server" }
"tiauth_faroe.client" = { path = "../client" }

[build-system]
requires = ["uv_build>=0.9,<0.11"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15.0",
    "ty>=0.0.17",
]
