[project]
name = "sync-reference-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tiauth_faroe.user_server",
    "tiauth_faroe.client",
    "sqlalchemy>=2.0.49"
]

[tool.uv]
# Only allow packages uploaded at least 3 days ago to guard against supply chain attacks
exclude-newer = "3 days"

[tool.uv.sources]
"tiauth_faroe.user_server" = { path = "../user-server" }
"tiauth_faroe.client" = { path = "../client" }

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
