[project]
name = "tiauth-faroe-user-server"
version = "0.1.0"
description = "Helper library for creating a Faroe user server in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]

[tool.uv.build-backend]
module-name = "tiauth_faroe.user_server"

[build-system]
requires = ["uv_build>=0.9,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15.0",
    "ty>=0.0.17",
]
